--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
             <div id="content-container">
 
                 <h4>
-                    <a href="Bento/" target="_blank">Bento</a>
+                    [<a href="Bento/" target="_blank">Bento</a>] <small>by <a href="https://github.com/migueravila" target="_blank">migueravila</a></small>
                 </h4>
+                <h4>
+                    [<a href="Counter-Strike Café/v1/" target="_blank">CSCafe v1</a>] <small>by <a href="https://github.com/saintly2k">$aintly2k</a></small>
+                </h4>
+                <h4>
+                    [<a href="Counter-Strike Café/v2/" target="_blank">CSCafe v2</a>] <small>by <a href="https://github.com/saintly2k">$aintly2k</a></small>
+                </h4>
+
 
             </div>
 
