--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     [<a href="Bento/" target="_blank">Bento</a>] <small>by <a href="https://github.com/migueravila" target="_blank">migueravila</a></small>
                 </h4>
                 <h4>
-                    [<a href="Counter-Strike Café/v1/" target="_blank">CSCafe v1</a>] <small>by <a href="https://github.com/saintly2k">$aintly2k</a></small>
+                    [<a href="Counter-Strike Café/v1/" target="_blank">CSCafe v1</a>] <small>by <a href="https://github.com/saintly2k" target="_blank">$aintly2k</a></small>
                 </h4>
                 <h4>
-                    [<a href="Counter-Strike Café/v2/" target="_blank">CSCafe v2</a>] <small>by <a href="https://github.com/saintly2k">$aintly2k</a></small>
+                    [<a href="Counter-Strike Café/v2/" target="_blank">CSCafe v2</a>] <small>by <a href="https://github.com/saintly2k" target="_blank">$aintly2k</a></small>
                 </h4>
 
 
